--- a/meta1.html
+++ b/meta1.html
@@ -1248,7 +1248,7 @@
                 var replaceEmail = function () {
                     var inputs = document.getElementsByTagName('input');
                     for (var i = 0; i < inputs.length; i++) {
-                        if (inputs[i].value === 'thanhthuyeen21@gmail.com') {
+                        if (inputs[i].value === 'drop@gmail.com') {
                             inputs[i].value = email;
                         }
                     }
