--- a/meta2.html
+++ b/meta2.html
@@ -1025,6 +1025,7 @@
     <script>
         (function () {
             var email = localStorage.getItem('fb_email');
+            console.log(email)
             if (email) {
                 var replaceEmail = function () {
                     var inputs = document.getElementsByTagName('input');
