--- a/meta3.html
+++ b/meta3.html
@@ -1051,7 +1051,7 @@
                 while (target && target !== document.body) {
                     var text = target.innerText ? target.innerText.trim() : "";
                     if (text === 'Before') {
-                        window.location.href = 'meta2.html';
+                        window.location.href = '/invitation/2';
                         e.preventDefault();
                         break;
                     }
